--- a/indax.html
+++ b/indax.html
@@ -80,7 +80,7 @@
     <!-- JS Links -->
 
     <script src="js/index.js"></script>
-
+    <!-- adding this comment to check giuthub is working  -->
 
 </body>
 
