--- a/index.html
+++ b/index.html
@@ -40,15 +40,15 @@
             <div class="col-md-6">
                 <ul class="nav nav-tabs">
                     <li class="nav-item">
-                        <a href="#signup" class="nav-link" data-bs-toggle="tab">Signup</a>
+                        <a href="#signup" class="nav-link active" data-bs-toggle="tab">Signup</a>
                     </li>
                     <li class="nav-item">
-                        <a href="#login" class="nav-link active" data-bs-toggle="tab">Login</a>
+                        <a href="#login" class="nav-link" data-bs-toggle="tab">Login</a>
                     </li>
                 </ul>
                 <div class="tab-content">
                     <!-- Signup Tab -->
-                    <div class="tab-pane  container mt-3" id="signup">
+                    <div class="tab-pane active container mt-3" id="signup">
                         <img src="C:\Users\Victus\OneDrive\Desktop\ss Hotals\signup-3.webp.png" class="w-25" alt="Signup Image">
                         <form>
                             <input required name="fullname" type="text" placeholder="Full Name" class="mb-3 form-control">
@@ -61,7 +61,7 @@
                         </form>
                     </div>
                     <!-- Login Tab -->
-                    <div class="tab-pane active container mt-3" id="login">
+                    <div class="tab-pane container mt-3" id="login">
                         <form class="login-form">
                             <input type="email" placeholder="Email" class="mb-3 form-control">
                             <input type="password" placeholder="Password" class="mb-3 form-control">
